use tendrl-server instead of usm_server gorup

--- a/configure_admin_email_notifications.yml
+++ b/configure_admin_email_notifications.yml
@@ -12,7 +12,7 @@
 #   tendrl_password: password for tendrl user (default: adminuser)
 #
 
-- hosts: usm_server
+- hosts: tendrl-server
   remote_user: root
   vars:
     tendrl_user: "admin"
