--- a/qe_evidence.skyrings.yml
+++ b/qe_evidence.skyrings.yml
@@ -22,7 +22,7 @@
     - qe-evidence-probe
 
 - name: Download evidence from RHSC 2.0 machine
-  hosts: usm_server
+  hosts: tendrl-server
   user: root
   vars:
     evidence_dirs:
