--- a/qe_pre_installation_tasks.yml
+++ b/qe_pre_installation_tasks.yml
@@ -4,13 +4,13 @@
 # * add any additional repo(s) if required, controlled by following variables
 #   (containing comma separated list of urls pointing to repo config files)
 #   - additional_repos
-#   - additional_repos_usm_server
+#   - additional_repos_tendrl-server
 #   - additional_repos_usm_nodes
 #   - additional_repos_usm_client
 # * update all packages
 # * enable ntp sync via chronyd
 #
-- hosts: usm_server
+- hosts: tendrl-server
   remote_user: root
   tasks:
     - name: Add any additional repo(s)
@@ -21,7 +21,7 @@
       delay: 5
       register: result
       until: 'result|success'
-      with_items: "{{ (additional_repos_usm_server | default('')).split(',') }}"
+      with_items: "{{ (additional_repos_tendrl-server | default('')).split(',') }}"
       when: item != ""
 
 - hosts: usm_nodes
@@ -52,7 +52,7 @@
       with_items: "{{ (additional_repos_usm_client | default('')).split(',') }}"
       when: item != ""
 
-- hosts: usm_server:usm_nodes:usm_client
+- hosts: tendrl-server:usm_nodes:usm_client
   remote_user: root
   tasks:
     - name: Add any additional repo(s)
