--- a/qe_tools.yml
+++ b/qe_tools.yml
@@ -2,7 +2,7 @@
 #
 # Install useful and auxiliary tools
 #
-- hosts: usm_server:usm_nodes:usm_client
+- hosts: tendrl-server:usm_nodes:usm_client
   remote_user: root
   tasks:
     - name: Install useful tools
