--- a/tendrl.yml
+++ b/tendrl.yml
@@ -4,7 +4,7 @@
 # Install Tendrl server
 #
 
-- hosts: usm_server
+- hosts: tendrl-server
   remote_user: root
   vars:
     etcd_fqdn: "{{ ansible_fqdn }}"
@@ -25,10 +25,10 @@
     #- tendrl-ansible.ceph-installer # TODO: make it optional (when we don't deploy ceph)
     - tendrl-ansible.tendrl-server
   post_tasks:
-    - debug: var=hostvars[groups['usm_server'][0]]['admin_password']
+    - debug: var=hostvars[groups['tendrl-server'][0]]['admin_password']
     - name: Copy usm.ini template
       local_action: template src=./templates/usm.ini.j2 dest=./usm.ini
-      when: hostvars[groups['usm_server'][0]]['admin_password'].changed
+      when: hostvars[groups['tendrl-server'][0]]['admin_password'].changed
 
 #
 # Install Tendrl on storage nodes
@@ -37,8 +37,8 @@
 - hosts: ceph_osd:ceph_mon
   remote_user: root
   vars:
-    etcd_fqdn: "{{ hostvars[groups['usm_server'][0]].ansible_fqdn }}"
-    graphite_fqdn: "{{ hostvars[groups['usm_server'][0]].ansible_fqdn }}"
+    etcd_fqdn: "{{ hostvars[groups['tendrl-server'][0]].ansible_fqdn }}"
+    graphite_fqdn: "{{ hostvars[groups['tendrl-server'][0]].ansible_fqdn }}"
     etcd_tls_client_auth: True
     etcd_trusted_ca_file: "/etc/pki/tls/certs/ca-usmqe.crt"
   roles:
@@ -53,8 +53,8 @@
 - hosts: gluster
   remote_user: root
   vars:
-    etcd_fqdn: "{{ hostvars[groups['usm_server'][0]].ansible_fqdn }}"
-    graphite_fqdn: "{{ hostvars[groups['usm_server'][0]].ansible_fqdn }}"
+    etcd_fqdn: "{{ hostvars[groups['tendrl-server'][0]].ansible_fqdn }}"
+    graphite_fqdn: "{{ hostvars[groups['tendrl-server'][0]].ansible_fqdn }}"
     etcd_tls_client_auth: True
     etcd_trusted_ca_file: "/etc/pki/tls/certs/ca-usmqe.crt"
   roles:
