--- a/test_setup.smtp.yml
+++ b/test_setup.smtp.yml
@@ -61,7 +61,7 @@
         state: started
         enabled: yes
 
-- hosts: usm_server
+- hosts: tendrl-server
   remote_user: root
   handlers:
     - name: restart tendrl-notifier
@@ -78,7 +78,7 @@
     # notifier sends email alerts (for tendrl admin) to this email address
     tendrl_admin_recipient_email: "root@{{ groups['usm_client'][0] }}"
     # notifier sends email alerts from this email address
-    tendrl_notifier_email_id: "tendrl@{{ groups['usm_server'][0] }}"
+    tendrl_notifier_email_id: "tendrl@{{ groups['tendrl-server'][0] }}"
     # smpt server which notifier uses to send email
     tendrl_notifier_email_smtp_server: "{{ groups['usm_client'][0] }}"
     # smpt port of server specified above
