--- a/qe_server_sshkey.yml
+++ b/qe_server_sshkey.yml
@@ -24,7 +24,7 @@
     register: usmqe_ssh_key
 
 - name: Deploy ssh public key of usmqe user to test machines
-  hosts: tendrl-server:usm_nodes:usm_client
+  hosts: tendrl-server:gluster-servers:usm_client
   user: root
   vars:
     ssh_key: "{{ hostvars[groups['qe_server'][0]].usmqe_ssh_key.stdout }}"
