--- a/qe_ssl_certs.etcd.yml
+++ b/qe_ssl_certs.etcd.yml
@@ -9,7 +9,7 @@
       ssl_key_perm: "0644"
       # ssl_owner: "etcd"
 
-- hosts: usm_nodes
+- hosts: gluster-servers
   remote_user: root
   roles:
     - role: qe-ssl-cert
